--- a/api-test/src/main/resources/preReg/CancelAppointment/CancelAppointment.yml
+++ b/api-test/src/main/resources/preReg/CancelAppointment/CancelAppointment.yml
@@ -1,6 +1,7 @@
 CancelAppointment:
    Prereg_CancelAppointment_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_CancelAppointment_01
       description: Cancel appointment for a valid preregistration ID
       role: batch
       checkErrorsOnlyInResponse: true
@@ -14,6 +15,7 @@ CancelAppointment:
 }'
    Prereg_CancelAppointment_with_already_cancelled_appoinment:
       endPoint: /preregistration/v1/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_CancelAppointment_02
       description: Canceling an appointment that has already been cancelled
       role: batch
       checkErrorsOnlyInResponse: true
@@ -32,6 +34,7 @@ CancelAppointment:
 }'
    Prereg_CancelAppointment_cancell_incomplete_appoinment:
       endPoint: /preregistration/v1/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_CancelAppointment_03
       description: Canceling an appointment with an incomplete appointment data
       role: batch
       checkErrorsOnlyInResponse: true
@@ -50,6 +53,7 @@ CancelAppointment:
 }'
    Prereg_CancelAppointment_inValid_preRegistrationId_sid:
       endPoint: /preregistration/v1/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_CancelAppointment_04
       description: Canceling an appointment with an invalid preregistration ID
       role: batch
       restMethod: put
