--- a/api-test/src/main/resources/preReg/DeleteLostUinApplication/DeleteLostUinApplication.yml
+++ b/api-test/src/main/resources/preReg/DeleteLostUinApplication/DeleteLostUinApplication.yml
@@ -1,6 +1,7 @@
 DeleteLostUinApplication:
    Prereg_DeleteLostUinApplication_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/applications/prereg/{applicationId}
+      uniqueIdentifier: TC_prereg_DeleteLostUinApplication_01
       description: Delete the lost UIN application with valid data
       role: batch
       checkErrorsOnlyInResponse: true
@@ -15,6 +16,7 @@ DeleteLostUinApplication:
 }'
    Prereg_DeleteLostUinApplication_after_its_deletion:
       endPoint: /preregistration/v1/applications/prereg/{applicationId}
+      uniqueIdentifier: TC_prereg_DeleteLostUinApplication_02
       description: Delete the lost UIN application after it has been removed
       role: batch
       checkErrorsOnlyInResponse: true
@@ -33,6 +35,7 @@ DeleteLostUinApplication:
 }'
    Prereg_DeleteLostUinApplication_multiple_application_sid:
       endPoint: /preregistration/v1/applications/prereg/{applicationId}
+      uniqueIdentifier: TC_prereg_DeleteLostUinApplication_03
       description: Delete the lost UIN application with multiple preregistration IDs for the application
       role: batch
       checkErrorsOnlyInResponse: true
@@ -47,6 +50,7 @@ DeleteLostUinApplication:
 }'
    Prereg_DeleteLostUinApplication_inValid_preRegistrationId_sid:
       endPoint: /preregistration/v1/applications/prereg/{applicationId}
+      uniqueIdentifier: TC_prereg_DeleteLostUinApplication_04
       description: Delete the lost UIN application with an invalid preregistration ID
       role: batch
       restMethod: delete
@@ -64,6 +68,7 @@ DeleteLostUinApplication:
 }'
    Prereg_DeleteLostUinApplication_random_number_sid:
       endPoint: /preregistration/v1/applications/prereg/{applicationId}
+      uniqueIdentifier: TC_prereg_DeleteLostUinApplication_05
       description: Delete the lost UIN application with a random number preregistration ID
       role: batch
       restMethod: delete
