--- a/api-test/src/main/resources/preReg/DeletePreRegistration/DeletePreRegistration.yml
+++ b/api-test/src/main/resources/preReg/DeletePreRegistration/DeletePreRegistration.yml
@@ -1,6 +1,7 @@
 DeletePreRegistration:
    Prereg_DeletePreRegistration_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/applications/prereg/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_DeletePreRegistration_01
       description: Delete the preregistration with a valid preregistration ID
       role: batch
       restMethod: delete
@@ -14,6 +15,7 @@ DeletePreRegistration:
 }'
    Prereg_DeletePreRegistration_inValid_preRegistrationId_sid:
       endPoint: /preregistration/v1/applications/prereg/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_DeletePreRegistration_02
       description: Delete the preregistration with an invalid preregistration ID
       role: batch
       restMethod: delete
