--- a/api-test/src/main/resources/preReg/GetAllApplicationsWithapplicationId/GetAllApplicationsWithapplicationId.yml
+++ b/api-test/src/main/resources/preReg/GetAllApplicationsWithapplicationId/GetAllApplicationsWithapplicationId.yml
@@ -1,6 +1,7 @@
 GetAllApplicationsWithapplicationId:
    Prereg_GetAllApplicationsWithapplicationId_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/applications/{applicationId}
+      uniqueIdentifier: TC_prereg_GetAllApplicationsWithapplicationId_01
       description: Retrieve all applications with the application ID
       role: batch
       checkErrorsOnlyInResponse: true
@@ -14,6 +15,7 @@ GetAllApplicationsWithapplicationId:
 }'
    Prereg_GetAllApplicationsWithapplicationId_with_expired:
       endPoint: /preregistration/v1/applications/{applicationId}
+      uniqueIdentifier: TC_prereg_GetAllApplicationsWithapplicationId_02
       description: Retrieve all applications with the expired application ID
       role: batch
       checkErrorsOnlyInResponse: true
@@ -27,6 +29,7 @@ GetAllApplicationsWithapplicationId:
 }'
    Prereg_GetAllApplicationsWithapplicationId_with_invalid_applicationId:
       endPoint: /preregistration/v1/applications/{applicationId}
+      uniqueIdentifier: TC_prereg_GetAllApplicationsWithapplicationId_03
       description: Retrieve all applications with an invalid application ID
       role: batch
       checkErrorsOnlyInResponse: true
