--- a/api-test/src/main/resources/preReg/Transliteration/Translate.yml
+++ b/api-test/src/main/resources/preReg/Transliteration/Translate.yml
@@ -1,6 +1,7 @@
 Transliteration:
    Prereg_Transliteration_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/transliteration/transliterate
+      uniqueIdentifier: TC_prereg_Transliteration_01
       description: Retrieve the preregistration data using valid transliteration
       role: batch
       restMethod: post
@@ -23,6 +24,7 @@ Transliteration:
 }'
    Prereg_Transliteration_inValid_tofieldlang:
       endPoint: /preregistration/v1/transliteration/transliterate
+      uniqueIdentifier: TC_prereg_Transliteration_02
       description: Retrieve the transliteration data for an invalid to-field language
       role: batch
       restMethod: post
@@ -46,6 +48,7 @@ Transliteration:
 }'
    Prereg_Transliteration_inValid_fromfieldlang:
       endPoint: /preregistration/v1/transliteration/transliterate
+      uniqueIdentifier: TC_prereg_Transliteration_03
       description: Retrieve the Transliteration data for an invalid 'to-field' language
       role: batch
       restMethod: post
