--- a/api-test/src/main/resources/preReg/UpdateDocRefID/UpdateDocRefID.yml
+++ b/api-test/src/main/resources/preReg/UpdateDocRefID/UpdateDocRefID.yml
@@ -1,6 +1,7 @@
 UpdateDocRefID:
    Prereg_UpdateDocRefID_All_Valid_Smoke_POA_sid:
       endPoint: /preregistration/v1/documents/document/{documentId}?preRegistrationId={preRegistrationId}&refNumber={refNumber}
+      uniqueIdentifier: TC_prereg_UpdateDocRefID_01
       description: Update the document reference ID for the valid Proof of Address (POA)
       role: batch
       checkErrorsOnlyInResponse: true
@@ -16,6 +17,7 @@ UpdateDocRefID:
 }'
    Prereg_UpdateDocRefID_All_Valid_Smoke_POI_sid:
       endPoint: /preregistration/v1/documents/document/{documentId}?preRegistrationId={preRegistrationId}&refNumber={refNumber}
+      uniqueIdentifier: TC_prereg_UpdateDocRefID_02
       description: Update the document reference ID for the valid Proof of Identity (POI)
       role: batch
       checkErrorsOnlyInResponse: true
@@ -31,6 +33,7 @@ UpdateDocRefID:
 }'
    Prereg_UpdateDocRefID_All_Valid_Smoke_POB_sid:
       endPoint: /preregistration/v1/documents/document/{documentId}?preRegistrationId={preRegistrationId}&refNumber={refNumber}
+      uniqueIdentifier: TC_prereg_UpdateDocRefID_03
       description: Update the document reference ID for the valid Proof of Date of Birth (POB)
       role: batch
       checkErrorsOnlyInResponse: true
@@ -46,6 +49,7 @@ UpdateDocRefID:
 }'
    Prereg_UpdateDocRefID_All_Valid_Smoke_POR_sid:
       endPoint: /preregistration/v1/documents/document/{documentId}?preRegistrationId={preRegistrationId}&refNumber={refNumber}
+      uniqueIdentifier: TC_prereg_UpdateDocRefID_04
       description: Update the document reference ID for the valid Proof of Residence (POR)
       role: batch
       checkErrorsOnlyInResponse: true
@@ -61,6 +65,7 @@ UpdateDocRefID:
 }'
    Prereg_UpdateDocRefID_inValid_documentId:
       endPoint: /preregistration/v1/documents/document/{documentId}?preRegistrationId={preRegistrationId}&refNumber={refNumber}
+      uniqueIdentifier: TC_prereg_UpdateDocRefID_05
       description: Update the document reference ID for the invalid document ID
       role: batch
       restMethod: put
@@ -81,6 +86,7 @@ UpdateDocRefID:
 
    Prereg_UpdateDocRefID_All_SpatialCharacter_RefNum_Neg:
       endPoint: /preregistration/v1/documents/document/{documentId}?preRegistrationId={preRegistrationId}&refNumber={refNumber}
+      uniqueIdentifier: TC_prereg_UpdateDocRefID_06
       description: Update the document reference ID with the special character and reference number 
       role: batch
       checkErrorsOnlyInResponse: true
@@ -102,6 +108,7 @@ UpdateDocRefID:
 
    Prereg_UpdateDocRefID_Exceeding_Limit_RefNum_Neg:
       endPoint: /preregistration/v1/documents/document/{documentId}?preRegistrationId={preRegistrationId}&refNumber={refNumber}
+      uniqueIdentifier: TC_prereg_UpdateDocRefID_07
       description: Update the document reference ID with an exceeding limit and reference number
       role: batch
       checkErrorsOnlyInResponse: true
