--- a/api-test/src/main/resources/preReg/UpdatePreRegStatus/updatePreRegStatus.yml
+++ b/api-test/src/main/resources/preReg/UpdatePreRegStatus/updatePreRegStatus.yml
@@ -1,6 +1,7 @@
 UpdatePreRegStatus:
    Prereg_UpdatePreRegStatus_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/applications/prereg/status/{preRegistrationId}?statusCode={statusCode}
+      uniqueIdentifier: TC_prereg_UpdatePreRegStatus_01
       description: Update the status of an application to 'Pending Appointment' using the prereg ID and status code
       role: batch
       checkErrorsOnlyInResponse: true
@@ -15,6 +16,7 @@ UpdatePreRegStatus:
 }'
    Prereg_UpdatePreRegStatus_for_expired_testcase_sid:
       endPoint: /preregistration/v1/applications/prereg/status/{preRegistrationId}?statusCode={statusCode}
+      uniqueIdentifier: TC_prereg_UpdatePreRegStatus_02
       description: Update the status of the expired test case application using the prereg ID and status code
       role: batch
       checkErrorsOnlyInResponse: true
@@ -29,6 +31,7 @@ UpdatePreRegStatus:
 }'
    Prereg_UpdatePreRegStatus_All_Valid_Smoke_BookByPRID_sid:
       endPoint: /preregistration/v1/applications/prereg/status/{preRegistrationId}?statusCode={statusCode}
+      uniqueIdentifier: TC_prereg_UpdatePreRegStatus_03
       description: Update the status for a valid booking using the PRID (Preregistration ID)    
       role: batch
       checkErrorsOnlyInResponse: true
@@ -43,6 +46,7 @@ UpdatePreRegStatus:
 }'
    Prereg_UpdatePreRegStatus_Valid_Smoke_sid:
       endPoint: /preregistration/v1/applications/prereg/status/{preRegistrationId}?statusCode={statusCode}
+      uniqueIdentifier: TC_prereg_UpdatePreRegStatus_04
       description: Update the application status to 'Pending Appointment' using the prereg ID and status code
       role: batch
       checkErrorsOnlyInResponse: true
@@ -57,6 +61,7 @@ UpdatePreRegStatus:
 }'
    Prereg_UpdatePreRegStatus_CA_Valid_Smoke_sid:
       endPoint: /preregistration/v1/applications/prereg/status/{preRegistrationId}?statusCode={statusCode}
+      uniqueIdentifier: TC_prereg_UpdatePreRegStatus_05
       description: Update the status of an application to'Pending Appointment'for canceling using the prereg ID and status code
       role: batch
       checkErrorsOnlyInResponse: true
@@ -71,6 +76,7 @@ UpdatePreRegStatus:
 }'
    Prereg_UpdatePreRegStatus_Smoke_alldel_sid:
       endPoint: /preregistration/v1/applications/prereg/status/{preRegistrationId}?statusCode={statusCode}
+      uniqueIdentifier: TC_prereg_UpdatePreRegStatus_06
       description: Update the status of an application to 'pending  Appointment' for deleted the prereg ID and status code
       role: batch
       checkErrorsOnlyInResponse: true
@@ -85,6 +91,7 @@ UpdatePreRegStatus:
 }'
    Prereg_UpdatePreRegStatus_Smoke_CancellAppointment_sid:
       endPoint: /preregistration/v1/applications/prereg/status/{preRegistrationId}?statusCode={statusCode}
+      uniqueIdentifier: TC_prereg_UpdatePreRegStatus_07
       description: Update the status of an application to 'cancell Appointment' using the preregistration ID and status code 
       role: batch
       checkErrorsOnlyInResponse: true
@@ -99,6 +106,7 @@ UpdatePreRegStatus:
 }'
    Prereg_UpdatePreRegStatus_Smoke_CancelApplicationsAppointment_sid:
       endPoint: /preregistration/v1/applications/prereg/status/{preRegistrationId}?statusCode={statusCode}
+      uniqueIdentifier: TC_prereg_UpdatePreRegStatus_08
       description: Update the status of an application to'cancell application Appointment'using the prereg ID and status code
       role: batch
       checkErrorsOnlyInResponse: true
@@ -113,6 +121,7 @@ UpdatePreRegStatus:
 }'
    Prereg_UpdatePreRegStatus_without_update_prereg_status_sid:
       endPoint: /preregistration/v1/applications/prereg/status/{preRegistrationId}?statusCode={statusCode}
+      uniqueIdentifier: TC_prereg_UpdatePreRegStatus_09
       description: Update the application status without modifying the preregistration status
       role: batch
       checkErrorsOnlyInResponse: true
