--- a/api-test/src/main/resources/preReg/bookAppointment/bookAppointment.yml
+++ b/api-test/src/main/resources/preReg/bookAppointment/bookAppointment.yml
@@ -1,6 +1,7 @@
 BookAppointment:
    Prereg_BookAppointment_All_Valid_Smoke:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_01
       description: Book an appoinment valid data
       role: batch
       checkErrorsOnlyInResponse: true
@@ -21,6 +22,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_CA_Smoke:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_02
       description: Book an appointment to cancel the existing appointment
       role: batch
       checkErrorsOnlyInResponse: true
@@ -41,6 +43,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_CancelApplicationsAppointment_Smoke:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_03
       description: Book an appointment to cancel applications the existing appointment
       role: batch
       checkErrorsOnlyInResponse: true
@@ -61,6 +64,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_inValid_preRegistrationId:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_04
       description: Book an appointment with an invalid preregistration ID
       role: batch
       restMethod: post
@@ -85,6 +89,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_blank_preRegistrationId:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_05
       description: Book an appointment with a blank preregistration ID
       role: batch
       restMethod: post
@@ -110,6 +115,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_Invalid_Id:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_06
       description: Book an appointment with a invalid preregistration ID
       role: batch
       restMethod: post
@@ -134,6 +140,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_Blank_Id:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_07
       description: Book an appointment with a blank ID
       role: batch
       restMethod: post
@@ -159,6 +166,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_Blank_version:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_08
       description: Book an appointment with a blank version
       role: batch
       restMethod: post
@@ -183,6 +191,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_Missing_version:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_09
       description: Book an appointment with a missing version
       role: batch
       restMethod: post
@@ -207,6 +216,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_Invalid_version:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_10
       description: Book an appointment with a invalid version
       role: batch
       restMethod: post
@@ -231,6 +241,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_Invalid_registration_center_id:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_11
       description: Book an appointment with an invalid registration center ID 
       role: batch
       restMethod: post
@@ -256,6 +267,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_Missing_registration_center_id:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_12
       description: Book an appointment with a missing registration center ID
       role: batch
       restMethod: post
@@ -281,6 +293,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_Blank_registration_center_id:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_13
       description: Book an appointment with a blank registration center ID
       role: batch
       restMethod: post
@@ -306,6 +319,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_Blank_appointment_date:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_14
       description: Book an appointment with a blank appointment date
       role: batch
       restMethod: post
@@ -331,6 +345,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_Missing_appointment_date:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_15
       description: Book an appointment with a missing appointment date
       role: batch
       restMethod: post
@@ -355,6 +370,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_Invalid_appointment_date:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_16
       description: Book an appointment with a invalid appointment date
       role: batch
       restMethod: post
@@ -380,6 +396,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_Invalid_time_slot_to:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_17
       description: Book an appointment with an invalid time slot
       role: batch
       restMethod: post
@@ -404,6 +421,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_Missing_time_slot_to:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_18
       description: Book an appointment with a missing time slot
       role: batch
       restMethod: post
@@ -428,6 +446,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_Invalid_time_slot_from:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_19
       description: Book an appointment with an invalid time slot from
       role: batch
       restMethod: post
@@ -452,6 +471,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_Blank_time_slot_to:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_20
       description: Book an appointment with an Blank time slot form
       role: batch
       restMethod: post
@@ -476,6 +496,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_Blank_time_slot_from:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_21
       description: Book an appointment with an blank time slot
       role: batch
       restMethod: post
@@ -500,6 +521,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_missing_time_slot_from:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_22
       description: Book an appointment with an missing time slot from
       role: batch
       restMethod: post
@@ -524,6 +546,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_missing_requesttime:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_23
       description: Book an appointment with a missing request time
       role: batch
       restMethod: post
@@ -548,6 +571,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_Invalid_requesttime:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_24
       description: Book an appointment with a invalid request time 
       role: batch
       restMethod: post
@@ -573,6 +597,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_Blank_requesttime:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_25
       description: Book an appointment with a Blank request time
       role: batch
       restMethod: post
@@ -597,6 +622,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_previous_date:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_26
       description: Book an appointment with a previous date
       role: batch
       restMethod: post
@@ -622,6 +648,7 @@ BookAppointment:
 
    Prereg_BookAppointment_On_holiday:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_27
       description: Book an appointment on a holiday 
       role: batch
       restMethod: post
@@ -648,6 +675,7 @@ BookAppointment:
 
    Prereg_BookAppointment_with_expired_status:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_28
       description: Book an appointment with an expired status
       role: batch
       checkErrorsOnlyInResponse: true
@@ -674,6 +702,7 @@ BookAppointment:
 }'
    Prereg_BookAppointment_with_All_InValid_data:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_BookAppointment_29
       description: Book an appointment with an invalid data
       role: batch
       checkErrorsOnlyInResponse: true
