--- a/api-test/src/main/resources/preReg/CancelApplicationsAppointment/CancelApplicationsAppointment.yml
+++ b/api-test/src/main/resources/preReg/CancelApplicationsAppointment/CancelApplicationsAppointment.yml
@@ -1,6 +1,7 @@
 CancelApplicationsAppointment:
    Prereg_CancelApplicationsAppointment_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_CancelAppointment_01
       description: Canceling appointment for a valid preregistration ID
       role: batch
       checkErrorsOnlyInResponse: true
@@ -14,6 +15,7 @@ CancelApplicationsAppointment:
 }'
    Prereg_CancelApplicationsAppointment_inValid_preRegistrationId_sid:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_CancelAppointment_02
       description: Canceling appointment for an invalid preregistration ID
       role: batch
       restMethod: put
