--- a/api-test/src/main/resources/preReg/CopyDocument/CopyDocument.yml
+++ b/api-test/src/main/resources/preReg/CopyDocument/CopyDocument.yml
@@ -1,6 +1,7 @@
 CopyDocument:
    Prereg_CopyDocument_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}?catCode={doc_cat_code}&sourcePreId={preRegistrationId}
+      uniqueIdentifier: TC_prereg_CopyDocument_01
       description: Copy the valid Proof of Address (POA) document
       role: batch
       restMethod: put
@@ -16,6 +17,7 @@ CopyDocument:
 }'
    Prereg_CopyDocument_in_Valid_doc_cat_code_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}?catCode={doc_cat_code}&sourcePreId={preRegistrationId}
+      uniqueIdentifier: TC_prereg_CopyDocument_02
       description: Copy the Proof of Address (POA) document with the invalid document category code
       role: batch
       restMethod: put
@@ -34,6 +36,7 @@ CopyDocument:
 }'
    Prereg_CopyDocument_blank_doc_cat_code_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}?catCode={doc_cat_code}&sourcePreId={preRegistrationId}
+      uniqueIdentifier: TC_prereg_CopyDocument_03
       description: Copy the blank document and categorize it with the code
       role: batch
       restMethod: put
@@ -52,6 +55,7 @@ CopyDocument:
 }'
    Prereg_CopyDocument_Invalid_preRegistrationId_sid:
       endPoint: /preregistration/v1/documents/{preRegistrationId}?catCode={doc_cat_code}&sourcePreId={preRegistrationId}
+      uniqueIdentifier: TC_prereg_CopyDocument_04
       description: Copy the Proof of Address (POA) document with the invalid preregistration ID
       role: batch
       restMethod: put
