--- a/api-test/src/main/resources/preReg/DeleteBooking/DeleteBooking.yml
+++ b/api-test/src/main/resources/preReg/DeleteBooking/DeleteBooking.yml
@@ -1,6 +1,7 @@
 DeleteBooking:
    Prereg_DeleteBooking_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/applications/appointment?preRegistrationId={preRegistrationId}
+      uniqueIdentifier: TC_prereg_DeleteBooking_01
       description: Delete bookings for all valid preregistration ID
       role: batch
       restMethod: delete
