--- a/api-test/src/main/resources/preReg/DeleteSpecificDocForaPRID/DeleteSpecificDocForaPRID.yml
+++ b/api-test/src/main/resources/preReg/DeleteSpecificDocForaPRID/DeleteSpecificDocForaPRID.yml
@@ -1,6 +1,7 @@
 DeleteSpecificDocForaPRID:
    Prereg_DeleteSpecificDocForaPRID_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/documents/{documentId}?preRegistrationId={preRegistrationId}
+      uniqueIdentifier: TC_prereg_DeleteSpecificDocForaPRID_01
       description: Delete specific document for a valid PRID 
       role: batch
       checkErrorsOnlyInResponse: true
@@ -16,6 +17,7 @@ DeleteSpecificDocForaPRID:
 }'
    Prereg_DeletePreRegistration_inValid_preRegistrationId_sid:
       endPoint: /preregistration/v1/documents/{documentId}?preRegistrationId={preRegistrationId}
+      uniqueIdentifier: TC_prereg_DeleteSpecificDocForaPRID_02
       description: Delete preregistration with an invalid PRID
       role: batch
       restMethod: post
@@ -34,6 +36,7 @@ DeleteSpecificDocForaPRID:
 }'
    Prereg_DeletePreRegistration_inValid_documentId_sid:
       endPoint: /preregistration/v1/documents/{documentId}?preRegistrationId={preRegistrationId}
+      uniqueIdentifier: TC_prereg_DeleteSpecificDocForaPRID_03
       description: Delete preregistration with an invalid document ID 
       role: batch
       restMethod: post
