--- a/api-test/src/main/resources/preReg/FetchApplicationByPrid/FetchApplicationByPrid.yml
+++ b/api-test/src/main/resources/preReg/FetchApplicationByPrid/FetchApplicationByPrid.yml
@@ -1,6 +1,7 @@
 FetchApplicationByPrid:
    Prereg_FetchApplicationByPrid_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/applications/prereg/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_FetchApplicationByPrid_01
       description: Fetch demographic details using a valid PRID
       role: batch
       restMethod: get
@@ -14,6 +15,7 @@ FetchApplicationByPrid:
 }'
    Prereg_FetchApplicationByPrid_inValid_preRegistrationId_sid:
       endPoint: /preregistration/v1/applications/prereg/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_FetchApplicationByPrid_02
       description: Fetch demographic details using an invalid PRID
       role: batch
       restMethod: get
