--- a/api-test/src/main/resources/preReg/GetAllPreRegApplications/GetAllPreRegApplications.yml
+++ b/api-test/src/main/resources/preReg/GetAllPreRegApplications/GetAllPreRegApplications.yml
@@ -1,6 +1,7 @@
 GetAllPreRegApplications:
    Prereg_GetAllPreRegApplications_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/applications
+      uniqueIdentifier: TC_prereg_GetAllPreRegApplications_01
       description: Retrieve all preregistered applications with a valid preregistration ID
       role: batch
       checkErrorsOnlyInResponse: true
@@ -13,6 +14,7 @@ GetAllPreRegApplications:
 }'
    Prereg_GetAllPreRegApplications_LOST_UIN_APPLICATION_sid:
       endPoint: /preregistration/v1/applications
+      uniqueIdentifier: TC_prereg_GetAllPreRegApplications_02
       description: Retrieve all preregistered applications with a prereg ID associated with the lost UIN application
       role: batch
       checkErrorsOnlyInResponse: true
@@ -25,6 +27,7 @@ GetAllPreRegApplications:
 }'
    Prereg_GetAllPreRegApplications_DELETE_UIN_APPLICATION_sid:
       endPoint: /preregistration/v1/applications
+      uniqueIdentifier: TC_prereg_GetAllPreRegApplications_03
       description: Retrieve all preregistered applications with a prereg ID associated with a deleted UIN application
       role: batch
       checkErrorsOnlyInResponse: true
