--- a/api-test/src/main/resources/preReg/GetApplicationWithPrId/GetApplicationWithPrId.yml
+++ b/api-test/src/main/resources/preReg/GetApplicationWithPrId/GetApplicationWithPrId.yml
@@ -1,6 +1,7 @@
 GetApplicationWithPrId:
    Prereg_GetApplicationWithPrId_inValid_preRegistrationId:
       endPoint: /preregistration/v1/applications/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_GetApplicationWithPrId_01
       description: Retrieve application with an invalid pre-registration ID (PRID)
       role: batch
       restMethod: get
