--- a/api-test/src/main/resources/preReg/GetAppointmentDetails/GetAppointmentDetails.yml
+++ b/api-test/src/main/resources/preReg/GetAppointmentDetails/GetAppointmentDetails.yml
@@ -1,6 +1,7 @@
 GetAppointmentDetails:
    Prereg_GetAppointmentDetails_BookByPRID_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_GetAppointmentDetails_01
       description: Retrieve appointment details booked by a valid PRID
       role: batch
       restMethod: get
@@ -14,6 +15,7 @@ GetAppointmentDetails:
 }'
    Prereg_GetAppointmentDetails_with_cancelled_appoinment:
       endPoint: /preregistration/v1/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_GetAppointmentDetails_02
       description: Retrieve appointment details for a cancelled appointment
       role: batch
       restMethod: get
@@ -27,6 +29,7 @@ GetAppointmentDetails:
 }'
    Prereg_GetAppointmentDetails_AllValid_Smoke_sid:
       endPoint: /preregistration/v1/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_GetAppointmentDetails_03
       description: Retrieve appointment details for a valid preregistrationID
       role: batch
       restMethod: get
@@ -41,6 +44,7 @@ GetAppointmentDetails:
 
    Prereg_GetAppointmentDetails_inValid_preRegistrationId:
       endPoint: /preregistration/v1/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_GetAppointmentDetails_04
       description: Retrieve appointment details for a invalid preregistrationID
       role: batch
       restMethod: get
@@ -58,6 +62,7 @@ GetAppointmentDetails:
 }'
    Prereg_GetAppointmentDetails_empty_space_preRegistrationId:
       endPoint: /preregistration/v1/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_GetAppointmentDetails_05
       description: Retrieve appointment details for an empty space preregistration ID
       role: batch
       restMethod: get
