--- a/api-test/src/main/resources/preReg/GetPRIDByDateRange/GetPRIDByDateRange.yml
+++ b/api-test/src/main/resources/preReg/GetPRIDByDateRange/GetPRIDByDateRange.yml
@@ -1,6 +1,7 @@
 GetPRIDByDateRange:
    Prereg_GetPRIDByDateRange_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/sync
+      uniqueIdentifier: TC_prereg_GetPRIDByDateRange_01
       description: Retrieve the PRID within the given date range
       role: regproc
       checkErrorsOnlyInResponse: true
@@ -20,6 +21,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_inValid_id:
       endPoint: /preregistration/v1/sync
+      uniqueIdentifier: TC_prereg_GetPRIDByDateRange_02
       description: Retrieve the PRID within the specified date range for the Invalid ID
       role: regproc
       restMethod: post
@@ -42,6 +44,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_blank_id:
       endPoint: /preregistration/v1/sync
+      uniqueIdentifier: TC_prereg_GetPRIDByDateRange_03
       description: Retrieve the PRID within the specified date range for the blank ID
       role: regproc
       restMethod: post
@@ -64,6 +67,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_missing_id:
       endPoint: /preregistration/v1/sync
+      uniqueIdentifier: TC_prereg_GetPRIDByDateRange_04
       description: Retrieve the PRID within the specified date range for the missing ID
       role: regproc
       restMethod: post
@@ -86,6 +90,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_invalid_version:
       endPoint: /preregistration/v1/sync
+      uniqueIdentifier: TC_prereg_GetPRIDByDateRange_05
       description: Retrieve the PRID within the specified date range for the invalid version
       role: regproc
       restMethod: post
@@ -108,6 +113,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_missing_version:
       endPoint: /preregistration/v1/sync
+      uniqueIdentifier: TC_prereg_GetPRIDByDateRange_06
       description: Retrieve the PRID within the specified date range for the missing version
       role: regproc
       restMethod: post
@@ -130,6 +136,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_blank_version:
       endPoint: /preregistration/v1/sync
+      uniqueIdentifier: TC_prereg_GetPRIDByDateRange_07
       description: Retrieve the PRID within the specified date range for the blank version
       role: regproc
       restMethod: post
@@ -152,6 +159,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_blank_requesttime:
       endPoint: /preregistration/v1/sync
+      uniqueIdentifier: TC_prereg_GetPRIDByDateRange_08
       description: Retrieve the PRID within the specified date range for the request time that is blank 
       role: regproc
       restMethod: post
@@ -174,6 +182,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_missing_requesttime:
       endPoint: /preregistration/v1/sync
+      uniqueIdentifier: TC_prereg_GetPRIDByDateRange_09
       description: Retrieve the PRID within the specified date range for the missing request time 
       role: regproc
       restMethod: post
@@ -196,6 +205,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_Invalid_requesttime:
       endPoint: /preregistration/v1/sync
+      uniqueIdentifier: TC_prereg_GetPRIDByDateRange_10
       description: Retrieve the PRID within the specified date range for the invalid request time
       role: regproc
       restMethod: post
@@ -218,6 +228,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_Invalid_registrationCenterId:
       endPoint: /preregistration/v1/sync
+      uniqueIdentifier: TC_prereg_GetPRIDByDateRange_11
       description: Retrieve the PRID within the specified date range for the invalid registration center ID
       role: regproc
       restMethod: post
@@ -240,6 +251,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_blank_registrationCenterId:
       endPoint: /preregistration/v1/sync
+      uniqueIdentifier: TC_prereg_GetPRIDByDateRange_12
       description: Retrieve the PRID within the specified date range for the blank registration center ID
       role: regproc
       restMethod: post
@@ -262,6 +274,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_missing_registrationCenterId:
       endPoint: /preregistration/v1/sync
+      uniqueIdentifier: TC_prereg_GetPRIDByDateRange_13
       description:  Retrieve the PRID within the specified date range for the missing registration center ID
       role: regproc
       restMethod: post
@@ -284,6 +297,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_missing_fromDate:
       endPoint: /preregistration/v1/sync
+      uniqueIdentifier: TC_prereg_GetPRIDByDateRange_14
       description: Retrieve the PRID within the specified date range where the fromDate is missing
       role: regproc
       restMethod: post
@@ -306,6 +320,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_Invalid_fromDate:
       endPoint: /preregistration/v1/sync
+      uniqueIdentifier: TC_prereg_GetPRIDByDateRange_15
       description: Retrieve the PRID within the specified date range where the fromDate is missing
       role: regproc
       restMethod: post
@@ -328,6 +343,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_blank_fromDate:
       endPoint: /preregistration/v1/sync
+      uniqueIdentifier: TC_prereg_GetPRIDByDateRange_16
       description: Retrieve the PRID within the specified date range where the fromDate field is blank
       role: regproc
       restMethod: post
@@ -350,6 +366,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_blank_toDate:
       endPoint: /preregistration/v1/sync
+      uniqueIdentifier: TC_prereg_GetPRIDByDateRange_17
       description: Retrieve the PRID within the specified date range where the toDate field is blank
       role: regproc
       restMethod: post
@@ -372,6 +389,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_missing_toDate:
       endPoint: /preregistration/v1/sync
+      uniqueIdentifier: TC_prereg_GetPRIDByDateRange_18
       description: Retrieve the PRID within the specified date range where the toDate field is missing 
       role: regproc
       restMethod: post
@@ -394,6 +412,7 @@ GetPRIDByDateRange:
 }'
    Prereg_GetPRIDByDateRange_Invalid_toDate:
       endPoint: /preregistration/v1/sync
+      uniqueIdentifier: TC_prereg_GetPRIDByDateRange_19
       description: Retrieve the PRID within the specified date range where the 'toDate' field is invalid
       role: regproc
       restMethod: post
