--- a/api-test/src/main/resources/preReg/GetPRIDForRegCent/GetPRIDForRegCent.yml
+++ b/api-test/src/main/resources/preReg/GetPRIDForRegCent/GetPRIDForRegCent.yml
@@ -1,6 +1,7 @@
 GetPRIDForRegCent:
    Prereg_GetPRIDForRegCent_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/appointment/preRegistrationId/{registrationCenterId}?from_date=2020-10-01&to_date=2034-10-13
+      uniqueIdentifier: TC_prereg_GetPRIDForRegCent_01
       description: Retrieve PRID for a valid registration center ID
       role: batch
       restMethod: get
@@ -14,6 +15,7 @@ GetPRIDForRegCent:
 }'
    Prereg_GetPRIDForRegCent_inValid_registrationCenterId_sid:
       endPoint: /preregistration/v1/appointment/preRegistrationId/{registrationCenterId}?from_date=2020-10-01&to_date=2021-10-13
+      uniqueIdentifier: TC_prereg_GetPRIDForRegCent_02
       description: Retrieve PRID for an invalid registration center ID
       role: batch
       restMethod: get
