--- a/api-test/src/main/resources/preReg/InvalidateToken/InvalidateToken.yml
+++ b/api-test/src/main/resources/preReg/InvalidateToken/InvalidateToken.yml
@@ -1,6 +1,7 @@
 InvalidateToken:
    Prereg_InvalidateToken_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/login/invalidateToken
+      uniqueIdentifier: TC_prereg_InvalidateToken_01
       description: Invalidate token using valid data
       role: batch
       restMethod: post
