--- a/api-test/src/main/resources/preReg/bookAppointmentByPRID/bookAppointmentByPRID.yml
+++ b/api-test/src/main/resources/preReg/bookAppointmentByPRID/bookAppointmentByPRID.yml
@@ -1,6 +1,7 @@
 BookAppointmentByPRID:
    Prereg_BookAppointmentByPRID_All_Valid_Smoke:
       endPoint: /preregistration/v1/applications/appointment
+      uniqueIdentifier: TC_prereg_BookAppointmentByPRID_01
       description: Book an appointment with a PRID for validation 
       role: batch
       checkErrorsOnlyInResponse: true
@@ -21,6 +22,7 @@ BookAppointmentByPRID:
 }'
    Prereg_BookAppointmentByPRID_inValid_preRegistrationId:
       endPoint: /preregistration/v1/applications/appointment
+      uniqueIdentifier: TC_prereg_BookAppointmentByPRID_02
       description: Book an appointment with a PRID for an invalid preregistration ID
       role: batch
       restMethod: post
@@ -45,6 +47,7 @@ BookAppointmentByPRID:
 }'
    Prereg_BookAppointmentByPRID_blank_preRegistrationId:
       endPoint: /preregistration/v1/applications/appointment
+      uniqueIdentifier: TC_prereg_BookAppointmentByPRID_03
       description: Book an appointment with a PRID for a blank preregistration ID
       role: batch
       restMethod: post
@@ -69,6 +72,7 @@ BookAppointmentByPRID:
 }'
    Prereg_BookAppointmentByPRID_missing_preRegistrationId:
       endPoint: /preregistration/v1/applications/appointment
+      uniqueIdentifier: TC_prereg_BookAppointmentByPRID_04
       description: Book an appointment with a PRID for a missing  preregistration ID
       role: batch
       restMethod: post
@@ -93,6 +97,7 @@ BookAppointmentByPRID:
 }'
    Prereg_BookAppointmentByPRID_inValid_Id:
       endPoint: /preregistration/v1/applications/appointment
+      uniqueIdentifier: TC_prereg_BookAppointmentByPRID_05
       description: Book an appointment with a PRID for a invalid preregistration ID
       role: batch
       restMethod: post
@@ -117,6 +122,7 @@ BookAppointmentByPRID:
 }'
    Prereg_BookAppointmentByPRID_Blank_Id:
       endPoint: /preregistration/v1/applications/appointment
+      uniqueIdentifier: TC_prereg_BookAppointmentByPRID_06
       description: Book an appointment with a PRID for a blank ID
       role: batch
       restMethod: post
@@ -141,6 +147,7 @@ BookAppointmentByPRID:
 }'
    Prereg_BookAppointmentByPRID_Blank_version:
       endPoint: /preregistration/v1/applications/appointment
+      uniqueIdentifier: TC_prereg_BookAppointmentByPRID_07
       description: Book an appointment with a PRID for a blank version
       role: batch
       restMethod: post
@@ -165,6 +172,7 @@ BookAppointmentByPRID:
 }'
    Prereg_BookAppointmentByPRID_Missing_version:
       endPoint: /preregistration/v1/applications/appointment
+      uniqueIdentifier: TC_prereg_BookAppointmentByPRID_08
       description: Book an appointment with a PRID for a missing version
       role: batch
       restMethod: post
@@ -189,6 +197,7 @@ BookAppointmentByPRID:
 }'
    Prereg_BookAppointmentByPRID_Invalid_version:
       endPoint: /preregistration/v1/applications/appointment
+      uniqueIdentifier: TC_prereg_BookAppointmentByPRID_09
       description: Schedule an appointment with a PRID for a invalid version 
       role: batch
       restMethod: post
@@ -213,6 +222,7 @@ BookAppointmentByPRID:
 }'
    Prereg_BookAppointmentByPRID_Invalid_registration_center_id:
       endPoint: /preregistration/v1/applications/appointment
+      uniqueIdentifier: TC_prereg_BookAppointmentByPRID_10
       description: Book an appointment with a PRID for an invalid registration center ID
       role: batch
       restMethod: post
@@ -237,6 +247,7 @@ BookAppointmentByPRID:
 }'
    Prereg_BookAppointmentByPRID_Missing_registration_center_id:
       endPoint: /preregistration/v1/applications/appointment
+      uniqueIdentifier: TC_prereg_BookAppointmentByPRID_11
       description: Book an appointment with a PRID for an missing registration center ID
       role: batch
       restMethod: post
@@ -261,6 +272,7 @@ BookAppointmentByPRID:
 }'
    Prereg_BookAppointmentByPRID_Blank_registration_center_id:
       endPoint: /preregistration/v1/applications/appointment
+      uniqueIdentifier: TC_prereg_BookAppointmentByPRID_12
       description: Book an appointment with a PRID for an Blank registration center ID
       role: batch
       restMethod: post
@@ -285,6 +297,7 @@ BookAppointmentByPRID:
 }'
    Prereg_BookAppointmentByPRID_Blank_appointment_date:
       endPoint: /preregistration/v1/applications/appointment
+      uniqueIdentifier: TC_prereg_BookAppointmentByPRID_13
       description: Book an appointment with a PRID for an Blank appointment date
       role: batch
       restMethod: post
@@ -309,6 +322,7 @@ BookAppointmentByPRID:
 }'
    Prereg_BookAppointmentByPRID_Missing_appointment_date:
       endPoint: /preregistration/v1/applications/appointment
+      uniqueIdentifier: TC_prereg_BookAppointmentByPRID_14
       description: Book an appointment with a PRID for a missing appointment date
       role: batch
       restMethod: post
@@ -333,6 +347,7 @@ BookAppointmentByPRID:
 }'
    Prereg_BookAppointmentByPRID_Invalid_appointment_date:
       endPoint: /preregistration/v1/applications/appointment
+      uniqueIdentifier: TC_prereg_BookAppointmentByPRID_15
       description: Book an appointment with a PRID for an invalid appointment date
       role: batch
       restMethod: post
@@ -358,6 +373,7 @@ BookAppointmentByPRID:
 }'
    Prereg_BookAppointmentByPRID_blank_time_slot_to:
       endPoint: /preregistration/v1/applications/appointment
+      uniqueIdentifier: TC_prereg_BookAppointmentByPRID_16
       description: Book an appointment with a PRID for an Blank time slot to
       role: batch
       restMethod: post
@@ -382,6 +398,7 @@ BookAppointmentByPRID:
 }'
    Prereg_BookAppointmentByPRID_blank_time_slot_from:
       endPoint: /preregistration/v1/applications/appointment
+      uniqueIdentifier: TC_prereg_BookAppointmentByPRID_17
       description: Book an appointment with a PRID for an Blank time slot from
       role: batch
       restMethod: post
@@ -406,6 +423,7 @@ BookAppointmentByPRID:
 }'
    Prereg_BookAppointmentByPRID_Missing_time_slot_to:
       endPoint: /preregistration/v1/applications/appointment
+      uniqueIdentifier: TC_prereg_BookAppointmentByPRID_18
       description: Book an appointment with a PRID for an missing time slot to
       role: batch
       restMethod: post
@@ -430,6 +448,7 @@ BookAppointmentByPRID:
 }'
    Prereg_BookAppointmentByPRID_Missing_time_slot_from:
       endPoint: /preregistration/v1/applications/appointment
+      uniqueIdentifier: TC_prereg_BookAppointmentByPRID_19
       description: Book an appointment with a PRID for an missing time slot from
       role: batch
       restMethod: post
@@ -454,6 +473,7 @@ BookAppointmentByPRID:
 }'
    Prereg_BookAppointmentByPRID_missing_requesttime:
       endPoint: /preregistration/v1/applications/appointment
+      uniqueIdentifier: TC_prereg_BookAppointmentByPRID_20
       description: Book an appointment with a PRID for a missing request time
       role: batch
       restMethod: post
@@ -478,6 +498,7 @@ BookAppointmentByPRID:
 }'
    Prereg_BookAppointmentByPRID_Invalid_requesttime:
       endPoint: /preregistration/v1/applications/appointment
+      uniqueIdentifier: TC_prereg_BookAppointmentByPRID_21
       description: Book an appointment with a PRID for a invalid request time
       role: batch
       restMethod: post
@@ -503,6 +524,7 @@ BookAppointmentByPRID:
 }'
    Prereg_BookAppointmentByPRID_Blank_requesttime:
       endPoint: /preregistration/v1/applications/appointment
+      uniqueIdentifier: TC_prereg_BookAppointmentByPRID_22
       description: Book an appointment with a PRID for a Blank request time
       role: batch
       restMethod: post
@@ -527,6 +549,7 @@ BookAppointmentByPRID:
 }'
    Prereg_BookAppointmentByPRID_previous_requesttime:
       endPoint: /preregistration/v1/applications/appointment
+      uniqueIdentifier: TC_prereg_BookAppointmentByPRID_23
       description: Book an appointment with a PRID for a previous request time
       role: batch
       restMethod: post
